--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
   <!-- <body> inneholder alt synlig innhold og interaktive elementer på siden. -->
   <body>
+    <div id="page-container">
     <!-- Eksempel på utkommentert test-overskrift.
          Kommentarer, renderes ikke i nettleseren. -->
     <!-- <h1>Første fil</h1> -->
@@ -202,5 +203,6 @@
       </form>
     </aside>
     <footer>Webutvikling 2025</footer>
+    </div>
   </body>
 </html>
