Add flexbox layout to sections and articles
Introduced new flexbox-based CSS classes for layout, applied them to main content and category sections in index.html. This improves responsive design and allows articles to grow proportionally within their containers.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
          Hjelper assistive tech å hoppe rett til “content”. Bare én <main> per side. -->
     <main>
       <!-- Seksjon for populære spillkort. -->
-      <section>
+      <section class="flex-container flex-grow">
         <!-- Seksjonsoverskrift for innholdsblokken. -->
         <h2>Populære Spæll</h2>
 
@@ -140,12 +140,12 @@
       </section>
 
       <!-- Seksjon for kategorier/lenkesamling til undersider. -->
-      <section>
+      <section class="flex-container flex-grow">
         <h2>Kategorier</h2>
 
         <!-- Hver <article> kan representere en kategoriinngang.
              <h3> inneholder en lenke til kategoriside. -->
-        <article>
+        <article class="grow-1">
           <!-- Lenke til “Action”-kategori. -->
           <h3><a href="action.html">Action</a></h3>
         </article>
@@ -160,7 +160,7 @@
           <h3><a href="rollespill.html">Rollespill</a></h3>
         </article>
 
-        <article>
+        <article class="grow-2">
           <!-- Lenke til “Fantasy”-kategori. -->
           <h3><a href="fantasy.html">Fantasy</a></h3>
         </article>
