--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <head>
     <!-- <meta charset> setter tegnsett. UTF-8 støtter norske tegn (æ, ø, å) og de fleste språk. -->
     <meta charset="UTF-8" />
-
     <!-- Gjør layout responsiv på mobile enheter:
          name="viewport" målretter visningsporten.
          content="width=device-width" => bruk enhetens faktiske bredde.
@@ -85,7 +84,7 @@
 
         <!-- <article> brukes for selvstendige innholdsbiter som kan stå alene (kort/produkt).
              Inneholder bilde, tittel, beskrivelse, pris og handling. -->
-        <article>
+        <article id="category-card">
           <!-- Produktbilde.
                alt-tekst beskriver produktet for tilgangsverktøy. -->
           <img
@@ -105,7 +104,59 @@
 
         <!-- Gjentatte produktkort med samme struktur.
              Tips: Unike alt-tekster og titler for hvert produkt. -->
+        <article id="box2">
+          <img
+            src="https://picsum.photos/200/300?grayscale"
+            alt="Red Dead Redemption"
+          />
+          <h3>Red dead Redemption</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+          <p>kr 499</p>
+          <a href="product.html" class="btn">Se produkt</a>
+        </article>
+
         <article>
+          <img
+            src="https://picsum.photos/200/300?grayscale"
+            alt="Red Dead Redemption"
+          />
+          <h3>Red dead Redemption</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+          <p>kr 499</p>
+          <a href="product.html" class="btn">Se produkt</a>
+        </article>
+
+        <article>
+          <img
+            src="https://picsum.photos/200/300?grayscale"
+            alt="Red Dead Redemption"
+          />
+          <h3>Red dead Redemption</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+          <p>kr 499</p>
+          <a href="product.html" class="btn">Se produkt</a>
+        </article>
+        <article id="box1">
+          <!-- Produktbilde.
+               alt-tekst beskriver produktet for tilgangsverktøy. -->
+          <img
+            src="https://picsum.photos/200/300?grayscale"
+            alt="Red Dead Redemption"
+          />
+          <!-- <h3> er artikkelens tittel (underordnet <h2>). -->
+          <h3>Red dead Redemption</h3>
+          <!-- Kort beskrivelse. -->
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+          <!-- Pris. Tips: vurder <data value="499">kr 499</data> for maskinlesbar verdi. -->
+          <p>kr 499</p>
+          <!-- Handlingslenke (CTA). href="" betyr “ingen mål-URL ennå”.
+               Tips: når dette blir en knapp som legger i handlekurv via JS, vurder <button>. -->
+          <a href="product.html" class="btn">Se produkt</a>
+        </article>
+
+        <!-- Gjentatte produktkort med samme struktur.
+             Tips: Unike alt-tekster og titler for hvert produkt. -->
+        <article id="box2">
           <img
             src="https://picsum.photos/200/300?grayscale"
             alt="Red Dead Redemption"
@@ -142,7 +193,6 @@
       <!-- Seksjon for kategorier/lenkesamling til undersider. -->
       <section class="flex-container flex-grow">
         <h2>Kategorier</h2>
-
         <!-- Hver <article> kan representere en kategoriinngang.
              <h3> inneholder en lenke til kategoriside. -->
         <article class="grow-1">
